--- a/72-major-salary/major-salary.ipynb
+++ b/72-major-salary/major-salary.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-12-10T13:15:51.764801196Z",
-     "start_time": "2025-12-10T13:15:51.234967179Z"
+     "end_time": "2025-12-11T18:39:15.594868Z",
+     "start_time": "2025-12-11T18:39:15.249192Z"
     }
    },
    "source": [
@@ -119,12 +119,12 @@
        "</div>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 1
+   "execution_count": 3
   },
   {
    "metadata": {
@@ -942,8 +942,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-10T13:40:09.366271695Z",
-     "start_time": "2025-12-10T13:40:09.322763551Z"
+     "end_time": "2025-12-11T18:39:30.016683Z",
+     "start_time": "2025-12-11T18:39:29.997980Z"
     }
    },
    "cell_type": "code",
@@ -1048,12 +1048,12 @@
        "</div>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 12
+   "execution_count": 5
   },
   {
    "metadata": {
@@ -1395,8 +1395,6 @@
     }
    },
    "cell_type": "code",
-   "source": "clean_df.loc[18]",
-   "id": "56c2877e0319f21b",
    "outputs": [
     {
      "data": {
@@ -1415,7 +1413,489 @@
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 25
+   "execution_count": 25,
+   "source": "clean_df.loc[18]",
+   "id": "66d78fccdd1a1143"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-11T18:39:36.465942Z",
+     "start_time": "2025-12-11T18:39:36.446831Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "clean_df['Mid-Career 90th Percentile Salary'] - clean_df['Mid-Career 10th Percentile Salary']",
+   "id": "5414c5185c848086",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     109800.0\n",
+       "1      96700.0\n",
+       "2     113700.0\n",
+       "3     104200.0\n",
+       "4      85400.0\n",
+       "5      96200.0\n",
+       "6      98100.0\n",
+       "7     108200.0\n",
+       "8     122100.0\n",
+       "9     102700.0\n",
+       "10     84600.0\n",
+       "11    105500.0\n",
+       "12     95900.0\n",
+       "13     98000.0\n",
+       "14    114700.0\n",
+       "15     74800.0\n",
+       "16    116300.0\n",
+       "17    159400.0\n",
+       "18     72700.0\n",
+       "19     98700.0\n",
+       "20     99600.0\n",
+       "21    102100.0\n",
+       "22    147800.0\n",
+       "23     70000.0\n",
+       "24     92000.0\n",
+       "25    111000.0\n",
+       "26     76000.0\n",
+       "27     66400.0\n",
+       "28    112000.0\n",
+       "29     88500.0\n",
+       "30    115900.0\n",
+       "31     84500.0\n",
+       "32     71300.0\n",
+       "33    118800.0\n",
+       "34    106600.0\n",
+       "35    100700.0\n",
+       "36    132900.0\n",
+       "37    137800.0\n",
+       "38     99300.0\n",
+       "39    107300.0\n",
+       "40     50700.0\n",
+       "41     65300.0\n",
+       "42    132500.0\n",
+       "43     57600.0\n",
+       "44    122000.0\n",
+       "45    126800.0\n",
+       "46     95400.0\n",
+       "47     66700.0\n",
+       "48     87300.0\n",
+       "49     65400.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 6
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-11T18:41:09.227832Z",
+     "start_time": "2025-12-11T18:41:09.199232Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "clean_df['Mid-Career 90th Percentile Salary'].subtract(clean_df['Mid-Career 10th Percentile Salary'])",
+   "id": "1c3f4a45737f7fc1",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     109800.0\n",
+       "1      96700.0\n",
+       "2     113700.0\n",
+       "3     104200.0\n",
+       "4      85400.0\n",
+       "5      96200.0\n",
+       "6      98100.0\n",
+       "7     108200.0\n",
+       "8     122100.0\n",
+       "9     102700.0\n",
+       "10     84600.0\n",
+       "11    105500.0\n",
+       "12     95900.0\n",
+       "13     98000.0\n",
+       "14    114700.0\n",
+       "15     74800.0\n",
+       "16    116300.0\n",
+       "17    159400.0\n",
+       "18     72700.0\n",
+       "19     98700.0\n",
+       "20     99600.0\n",
+       "21    102100.0\n",
+       "22    147800.0\n",
+       "23     70000.0\n",
+       "24     92000.0\n",
+       "25    111000.0\n",
+       "26     76000.0\n",
+       "27     66400.0\n",
+       "28    112000.0\n",
+       "29     88500.0\n",
+       "30    115900.0\n",
+       "31     84500.0\n",
+       "32     71300.0\n",
+       "33    118800.0\n",
+       "34    106600.0\n",
+       "35    100700.0\n",
+       "36    132900.0\n",
+       "37    137800.0\n",
+       "38     99300.0\n",
+       "39    107300.0\n",
+       "40     50700.0\n",
+       "41     65300.0\n",
+       "42    132500.0\n",
+       "43     57600.0\n",
+       "44    122000.0\n",
+       "45    126800.0\n",
+       "46     95400.0\n",
+       "47     66700.0\n",
+       "48     87300.0\n",
+       "49     65400.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 7
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-11T18:43:38.239758Z",
+     "start_time": "2025-12-11T18:43:38.222447Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "spread_col = clean_df['Mid-Career 90th Percentile Salary'] - clean_df['Mid-Career 10th Percentile Salary']\n",
+    "clean_df.insert(1, 'spread', spread_col)\n",
+    "clean_df.head()"
+   ],
+   "id": "f71e79629e2f1ccb",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "     Undergraduate Major    spread  Starting Median Salary  \\\n",
+       "0             Accounting  109800.0                 46000.0   \n",
+       "1  Aerospace Engineering   96700.0                 57700.0   \n",
+       "2            Agriculture  113700.0                 42600.0   \n",
+       "3           Anthropology  104200.0                 36800.0   \n",
+       "4           Architecture   85400.0                 41600.0   \n",
+       "\n",
+       "   Mid-Career Median Salary  Mid-Career 10th Percentile Salary  \\\n",
+       "0                   77100.0                            42200.0   \n",
+       "1                  101000.0                            64300.0   \n",
+       "2                   71900.0                            36300.0   \n",
+       "3                   61500.0                            33800.0   \n",
+       "4                   76800.0                            50600.0   \n",
+       "\n",
+       "   Mid-Career 90th Percentile Salary     Group  \n",
+       "0                           152000.0  Business  \n",
+       "1                           161000.0      STEM  \n",
+       "2                           150000.0  Business  \n",
+       "3                           138000.0      HASS  \n",
+       "4                           136000.0  Business  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Undergraduate Major</th>\n",
+       "      <th>spread</th>\n",
+       "      <th>Starting Median Salary</th>\n",
+       "      <th>Mid-Career Median Salary</th>\n",
+       "      <th>Mid-Career 10th Percentile Salary</th>\n",
+       "      <th>Mid-Career 90th Percentile Salary</th>\n",
+       "      <th>Group</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Accounting</td>\n",
+       "      <td>109800.0</td>\n",
+       "      <td>46000.0</td>\n",
+       "      <td>77100.0</td>\n",
+       "      <td>42200.0</td>\n",
+       "      <td>152000.0</td>\n",
+       "      <td>Business</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Aerospace Engineering</td>\n",
+       "      <td>96700.0</td>\n",
+       "      <td>57700.0</td>\n",
+       "      <td>101000.0</td>\n",
+       "      <td>64300.0</td>\n",
+       "      <td>161000.0</td>\n",
+       "      <td>STEM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Agriculture</td>\n",
+       "      <td>113700.0</td>\n",
+       "      <td>42600.0</td>\n",
+       "      <td>71900.0</td>\n",
+       "      <td>36300.0</td>\n",
+       "      <td>150000.0</td>\n",
+       "      <td>Business</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Anthropology</td>\n",
+       "      <td>104200.0</td>\n",
+       "      <td>36800.0</td>\n",
+       "      <td>61500.0</td>\n",
+       "      <td>33800.0</td>\n",
+       "      <td>138000.0</td>\n",
+       "      <td>HASS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Architecture</td>\n",
+       "      <td>85400.0</td>\n",
+       "      <td>41600.0</td>\n",
+       "      <td>76800.0</td>\n",
+       "      <td>50600.0</td>\n",
+       "      <td>136000.0</td>\n",
+       "      <td>Business</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 8
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-11T19:02:29.146067Z",
+     "start_time": "2025-12-11T19:02:29.127Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "low_risk = clean_df.sort_values('spread')\n",
+    "low_risk['Undergraduate Major'].head()"
+   ],
+   "id": "987894344b83cd27",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "40                       Nursing\n",
+       "43           Physician Assistant\n",
+       "41                     Nutrition\n",
+       "49                       Spanish\n",
+       "27    Health Care Administration\n",
+       "Name: Undergraduate Major, dtype: object"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 11
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-11T19:12:48.627029Z",
+     "start_time": "2025-12-11T19:12:48.597788Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "highest_potential = clean_df.sort_values('Mid-Career 90th Percentile Salary', ascending=False)\n",
+    "highest_potential[['Undergraduate Major', 'Mid-Career 90th Percentile Salary']].head()"
+   ],
+   "id": "4c95d0baa7b37499",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "     Undergraduate Major  Mid-Career 90th Percentile Salary\n",
+       "17             Economics                           210000.0\n",
+       "22               Finance                           195000.0\n",
+       "8   Chemical Engineering                           194000.0\n",
+       "37                  Math                           183000.0\n",
+       "44               Physics                           178000.0"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Undergraduate Major</th>\n",
+       "      <th>Mid-Career 90th Percentile Salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Economics</td>\n",
+       "      <td>210000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Finance</td>\n",
+       "      <td>195000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Chemical Engineering</td>\n",
+       "      <td>194000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>Math</td>\n",
+       "      <td>183000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>Physics</td>\n",
+       "      <td>178000.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 22
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-11T19:14:20.656290Z",
+     "start_time": "2025-12-11T19:14:20.634324Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "highest_spread = clean_df.sort_values('spread', ascending=False)\n",
+    "highest_spread[['Undergraduate Major', 'spread']].head()"
+   ],
+   "id": "bd670286ac6b936a",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "   Undergraduate Major    spread\n",
+       "17           Economics  159400.0\n",
+       "22             Finance  147800.0\n",
+       "37                Math  137800.0\n",
+       "36           Marketing  132900.0\n",
+       "42          Philosophy  132500.0"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Undergraduate Major</th>\n",
+       "      <th>spread</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Economics</td>\n",
+       "      <td>159400.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Finance</td>\n",
+       "      <td>147800.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>Math</td>\n",
+       "      <td>137800.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>Marketing</td>\n",
+       "      <td>132900.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>Philosophy</td>\n",
+       "      <td>132500.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 24
   },
   {
    "metadata": {},
@@ -1423,7 +1903,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "2416f6e8cf5b20c2"
+   "id": "c8e4fbc1e0afbc46"
   }
  ],
  "metadata": {
