--- a/72-major-salary/major-salary.ipynb
+++ b/72-major-salary/major-salary.ipynb
@@ -1898,12 +1898,220 @@
    "execution_count": 24
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-11T19:28:51.471417Z",
+     "start_time": "2025-12-11T19:28:51.448019Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "clean_df.groupby('Group').count()",
+   "id": "c8e4fbc1e0afbc46",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "          Undergraduate Major  spread  Starting Median Salary  \\\n",
+       "Group                                                           \n",
+       "Business                   12      12                      12   \n",
+       "HASS                       22      22                      22   \n",
+       "STEM                       16      16                      16   \n",
+       "\n",
+       "          Mid-Career Median Salary  Mid-Career 10th Percentile Salary  \\\n",
+       "Group                                                                   \n",
+       "Business                        12                                 12   \n",
+       "HASS                            22                                 22   \n",
+       "STEM                            16                                 16   \n",
+       "\n",
+       "          Mid-Career 90th Percentile Salary  \n",
+       "Group                                        \n",
+       "Business                                 12  \n",
+       "HASS                                     22  \n",
+       "STEM                                     16  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Undergraduate Major</th>\n",
+       "      <th>spread</th>\n",
+       "      <th>Starting Median Salary</th>\n",
+       "      <th>Mid-Career Median Salary</th>\n",
+       "      <th>Mid-Career 10th Percentile Salary</th>\n",
+       "      <th>Mid-Career 90th Percentile Salary</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Group</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Business</th>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>HASS</th>\n",
+       "      <td>22</td>\n",
+       "      <td>22</td>\n",
+       "      <td>22</td>\n",
+       "      <td>22</td>\n",
+       "      <td>22</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>STEM</th>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 26
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-11T19:34:31.237027Z",
+     "start_time": "2025-12-11T19:34:31.218351Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "pd.options.display.float_format = '{:,.2f}'.format\n",
+    "clean_df.groupby('Group').mean(numeric_only=True)"
+   ],
+   "id": "752a3a2e347687db",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "             spread  Starting Median Salary  Mid-Career Median Salary  \\\n",
+       "Group                                                                   \n",
+       "Business 103,958.33               44,633.33                 75,083.33   \n",
+       "HASS      95,218.18               37,186.36                 62,968.18   \n",
+       "STEM     101,600.00               53,862.50                 90,812.50   \n",
+       "\n",
+       "          Mid-Career 10th Percentile Salary  Mid-Career 90th Percentile Salary  \n",
+       "Group                                                                           \n",
+       "Business                          43,566.67                         147,525.00  \n",
+       "HASS                              34,145.45                         129,363.64  \n",
+       "STEM                              56,025.00                         157,625.00  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>spread</th>\n",
+       "      <th>Starting Median Salary</th>\n",
+       "      <th>Mid-Career Median Salary</th>\n",
+       "      <th>Mid-Career 10th Percentile Salary</th>\n",
+       "      <th>Mid-Career 90th Percentile Salary</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Group</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Business</th>\n",
+       "      <td>103,958.33</td>\n",
+       "      <td>44,633.33</td>\n",
+       "      <td>75,083.33</td>\n",
+       "      <td>43,566.67</td>\n",
+       "      <td>147,525.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>HASS</th>\n",
+       "      <td>95,218.18</td>\n",
+       "      <td>37,186.36</td>\n",
+       "      <td>62,968.18</td>\n",
+       "      <td>34,145.45</td>\n",
+       "      <td>129,363.64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>STEM</th>\n",
+       "      <td>101,600.00</td>\n",
+       "      <td>53,862.50</td>\n",
+       "      <td>90,812.50</td>\n",
+       "      <td>56,025.00</td>\n",
+       "      <td>157,625.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 30
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "c8e4fbc1e0afbc46"
+   "id": "d78bb5629224d487"
   }
  ],
  "metadata": {
