--- a/73-programming-lang-popularity/Programming_Languages.ipynb
+++ b/73-programming-lang-popularity/Programming_Languages.ipynb
@@ -386,24 +386,24 @@
     "colab_type": "code",
     "colab": {},
     "ExecuteTime": {
-     "end_time": "2025-12-15T12:49:54.676568528Z",
-     "start_time": "2025-12-15T12:49:54.636955756Z"
+     "end_time": "2025-12-15T12:55:16.903297227Z",
+     "start_time": "2025-12-15T12:55:16.856232934Z"
     }
    },
-   "source": "df.columns\n",
+   "source": "df.shape",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['m', 'TagName', 'Unnamed: 2'], dtype='object')"
+       "(1991, 3)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 4
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
@@ -420,13 +420,37 @@
    "metadata": {
     "id": "Sc1dmmOoIg2g",
     "colab_type": "code",
-    "colab": {}
+    "colab": {},
+    "ExecuteTime": {
+     "end_time": "2025-12-15T13:00:06.530174595Z",
+     "start_time": "2025-12-15T13:00:06.503052334Z"
+    }
    },
-   "source": [
-    ""
+   "source": "df.count(axis='columns')",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       3\n",
+       "1       3\n",
+       "2       3\n",
+       "3       3\n",
+       "4       3\n",
+       "       ..\n",
+       "1986    3\n",
+       "1987    3\n",
+       "1988    3\n",
+       "1989    3\n",
+       "1990    3\n",
+       "Length: 1991, dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
    ],
-   "execution_count": null,
-   "outputs": []
+   "execution_count": 10
   },
   {
    "cell_type": "markdown",
@@ -444,13 +468,42 @@
    "metadata": {
     "id": "9-NYFONcIc1X",
     "colab_type": "code",
-    "colab": {}
+    "colab": {},
+    "ExecuteTime": {
+     "end_time": "2025-12-15T13:13:08.574786362Z",
+     "start_time": "2025-12-15T13:13:08.538838867Z"
+    }
    },
    "source": [
-    ""
+    "df = df.rename(columns={'Unnamed: 2': 'posts'})\n",
+    "total_posts = df.groupby('TagName')['posts'].sum()\n",
+    "highest_num_posts = total_posts.sort_values('posts')"
    ],
-   "execution_count": 4,
-   "outputs": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TagName\n",
+      "assembly        34852\n",
+      "delphi          46212\n",
+      "go              47499\n",
+      "perl            65286\n",
+      "ruby           214582\n",
+      "swift          273055\n",
+      "c              336042\n",
+      "r              356799\n",
+      "c++            684210\n",
+      "php           1361988\n",
+      "c#            1423530\n",
+      "python        1496210\n",
+      "java          1696403\n",
+      "javascript    2056510\n",
+      "Name: posts, dtype: int64\n"
+     ]
+    }
+   ],
+   "execution_count": 19
   },
   {
    "cell_type": "markdown",
