--- a/73-programming-lang-popularity/Programming_Languages.ipynb
+++ b/73-programming-lang-popularity/Programming_Languages.ipynb
@@ -477,7 +477,7 @@
    "source": [
     "df = df.rename(columns={'Unnamed: 2': 'posts'})\n",
     "total_posts = df.groupby('TagName')['posts'].sum()\n",
-    "highest_num_posts = total_posts.sort_values('posts')"
+    "highest_num_posts = total_posts.sort_values('posts', ascending=False)"
    ],
    "outputs": [
     {
