--- a/73-programming-lang-popularity/Programming_Languages.ipynb
+++ b/73-programming-lang-popularity/Programming_Languages.ipynb
@@ -67,88 +67,13 @@
     "colab_type": "code",
     "colab": {},
     "ExecuteTime": {
-     "end_time": "2025-12-15T12:47:54.777987569Z",
-     "start_time": "2025-12-15T12:47:54.345329277Z"
+     "end_time": "2025-12-17T12:36:04.340755767Z",
+     "start_time": "2025-12-17T12:36:04.114001262Z"
     }
    },
    "source": "import pandas as pd",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "                     m     TagName  Unnamed: 2\n",
-       "0  2008-07-01 00:00:00          c#           3\n",
-       "1  2008-08-01 00:00:00    assembly           8\n",
-       "2  2008-08-01 00:00:00  javascript         162\n",
-       "3  2008-08-01 00:00:00           c          85\n",
-       "4  2008-08-01 00:00:00      python         124"
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>m</th>\n",
-       "      <th>TagName</th>\n",
-       "      <th>Unnamed: 2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2008-07-01 00:00:00</td>\n",
-       "      <td>c#</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2008-08-01 00:00:00</td>\n",
-       "      <td>assembly</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2008-08-01 00:00:00</td>\n",
-       "      <td>javascript</td>\n",
-       "      <td>162</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2008-08-01 00:00:00</td>\n",
-       "      <td>c</td>\n",
-       "      <td>85</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2008-08-01 00:00:00</td>\n",
-       "      <td>python</td>\n",
-       "      <td>124</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 1
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -175,11 +100,18 @@
    "metadata": {
     "id": "Bm7hQtEGIiri",
     "colab_type": "code",
-    "colab": {}
+    "colab": {},
+    "ExecuteTime": {
+     "end_time": "2025-12-17T12:55:15.870778672Z",
+     "start_time": "2025-12-17T12:55:15.855893605Z"
+    }
    },
-   "source": "df = pd.read_csv('QueryResults.csv')",
-   "execution_count": null,
-   "outputs": []
+   "source": [
+    "df = pd.read_csv('QueryResults.csv', names=['DATE', 'TAG', 'POSTS'], header=0)\n",
+    "# Setting the header row to 0 allows us to substitute our own column names."
+   ],
+   "outputs": [],
+   "execution_count": 8
   },
   {
    "cell_type": "markdown",
@@ -198,8 +130,8 @@
     "colab_type": "code",
     "colab": {},
     "ExecuteTime": {
-     "end_time": "2025-12-15T12:49:12.030192877Z",
-     "start_time": "2025-12-15T12:49:11.983080755Z"
+     "end_time": "2025-12-17T12:55:19.147844344Z",
+     "start_time": "2025-12-17T12:55:19.101586335Z"
     }
    },
    "source": "df.head()",
@@ -207,12 +139,12 @@
     {
      "data": {
       "text/plain": [
-       "                     m     TagName  Unnamed: 2\n",
-       "0  2008-07-01 00:00:00          c#           3\n",
-       "1  2008-08-01 00:00:00    assembly           8\n",
-       "2  2008-08-01 00:00:00  javascript         162\n",
-       "3  2008-08-01 00:00:00           c          85\n",
-       "4  2008-08-01 00:00:00      python         124"
+       "                  DATE         TAG  POSTS\n",
+       "0  2008-07-01 00:00:00          c#      3\n",
+       "1  2008-08-01 00:00:00    assembly      8\n",
+       "2  2008-08-01 00:00:00  javascript    162\n",
+       "3  2008-08-01 00:00:00           c     85\n",
+       "4  2008-08-01 00:00:00      python    124"
       ],
       "text/html": [
        "<div>\n",
@@ -233,9 +165,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>m</th>\n",
-       "      <th>TagName</th>\n",
-       "      <th>Unnamed: 2</th>\n",
+       "      <th>DATE</th>\n",
+       "      <th>TAG</th>\n",
+       "      <th>POSTS</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -274,18 +206,18 @@
        "</div>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-15T12:49:09.411822588Z",
-     "start_time": "2025-12-15T12:49:09.345309529Z"
+     "end_time": "2025-12-17T12:55:26.032658039Z",
+     "start_time": "2025-12-17T12:55:26.002261904Z"
     }
    },
    "cell_type": "code",
@@ -294,12 +226,12 @@
     {
      "data": {
       "text/plain": [
-       "                        m TagName  Unnamed: 2\n",
-       "1986  2020-07-01 00:00:00       r        5694\n",
-       "1987  2020-07-01 00:00:00      go         743\n",
-       "1988  2020-07-01 00:00:00    ruby         775\n",
-       "1989  2020-07-01 00:00:00    perl         182\n",
-       "1990  2020-07-01 00:00:00   swift        3607"
+       "                     DATE    TAG  POSTS\n",
+       "1986  2020-07-01 00:00:00      r   5694\n",
+       "1987  2020-07-01 00:00:00     go    743\n",
+       "1988  2020-07-01 00:00:00   ruby    775\n",
+       "1989  2020-07-01 00:00:00   perl    182\n",
+       "1990  2020-07-01 00:00:00  swift   3607"
       ],
       "text/html": [
        "<div>\n",
@@ -320,9 +252,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>m</th>\n",
-       "      <th>TagName</th>\n",
-       "      <th>Unnamed: 2</th>\n",
+       "      <th>DATE</th>\n",
+       "      <th>TAG</th>\n",
+       "      <th>POSTS</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -361,12 +293,12 @@
        "</div>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 2
+   "execution_count": 10
   },
   {
    "cell_type": "markdown",
@@ -386,11 +318,14 @@
     "colab_type": "code",
     "colab": {},
     "ExecuteTime": {
-     "end_time": "2025-12-15T12:55:16.903297227Z",
-     "start_time": "2025-12-15T12:55:16.856232934Z"
+     "end_time": "2025-12-17T12:55:34.704653733Z",
+     "start_time": "2025-12-17T12:55:34.663196568Z"
     }
    },
-   "source": "df.shape",
+   "source": [
+    "df.shape\n",
+    "# This tells us we have 1991 rows and 3 columns."
+   ],
    "outputs": [
     {
      "data": {
@@ -398,12 +333,12 @@
        "(1991, 3)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 7
+   "execution_count": 11
   },
   {
    "cell_type": "markdown",
@@ -422,35 +357,27 @@
     "colab_type": "code",
     "colab": {},
     "ExecuteTime": {
-     "end_time": "2025-12-15T13:00:06.530174595Z",
-     "start_time": "2025-12-15T13:00:06.503052334Z"
+     "end_time": "2025-12-17T12:56:16.141236213Z",
+     "start_time": "2025-12-17T12:56:16.085391327Z"
     }
    },
-   "source": "df.count(axis='columns')",
+   "source": "df.count()",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0       3\n",
-       "1       3\n",
-       "2       3\n",
-       "3       3\n",
-       "4       3\n",
-       "       ..\n",
-       "1986    3\n",
-       "1987    3\n",
-       "1988    3\n",
-       "1989    3\n",
-       "1990    3\n",
-       "Length: 1991, dtype: int64"
+       "DATE     1991\n",
+       "TAG      1991\n",
+       "POSTS    1991\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 10
+   "execution_count": 13
   },
   {
    "cell_type": "markdown",
@@ -470,40 +397,55 @@
     "colab_type": "code",
     "colab": {},
     "ExecuteTime": {
-     "end_time": "2025-12-15T13:13:08.574786362Z",
-     "start_time": "2025-12-15T13:13:08.538838867Z"
+     "end_time": "2025-12-17T12:59:05.655851436Z",
+     "start_time": "2025-12-17T12:59:05.604530350Z"
     }
    },
    "source": [
-    "df = df.rename(columns={'Unnamed: 2': 'posts'})\n",
-    "total_posts = df.groupby('TagName')['posts'].sum()\n",
-    "highest_num_posts = total_posts.sort_values('posts', ascending=False)"
+    "total_posts = df.groupby('TAG').sum()\n",
+    "print(total_posts)\n"
    ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TagName\n",
-      "assembly        34852\n",
-      "delphi          46212\n",
-      "go              47499\n",
-      "perl            65286\n",
-      "ruby           214582\n",
-      "swift          273055\n",
-      "c              336042\n",
-      "r              356799\n",
-      "c++            684210\n",
-      "php           1361988\n",
-      "c#            1423530\n",
-      "python        1496210\n",
-      "java          1696403\n",
-      "javascript    2056510\n",
-      "Name: posts, dtype: int64\n"
+      "                                                         DATE    POSTS\n",
+      "TAG                                                                   \n",
+      "assembly    2008-08-01 00:00:002008-09-01 00:00:002008-10-...    34852\n",
+      "c           2008-08-01 00:00:002008-09-01 00:00:002008-10-...   336042\n",
+      "c#          2008-07-01 00:00:002008-08-01 00:00:002008-09-...  1423530\n",
+      "c++         2008-08-01 00:00:002008-09-01 00:00:002008-10-...   684210\n",
+      "delphi      2008-08-01 00:00:002008-09-01 00:00:002008-10-...    46212\n",
+      "go          2009-11-01 00:00:002009-12-01 00:00:002010-01-...    47499\n",
+      "java        2008-08-01 00:00:002008-09-01 00:00:002008-10-...  1696403\n",
+      "javascript  2008-08-01 00:00:002008-09-01 00:00:002008-10-...  2056510\n",
+      "perl        2008-08-01 00:00:002008-09-01 00:00:002008-10-...    65286\n",
+      "php         2008-08-01 00:00:002008-09-01 00:00:002008-10-...  1361988\n",
+      "python      2008-08-01 00:00:002008-09-01 00:00:002008-10-...  1496210\n",
+      "r           2008-09-01 00:00:002008-11-01 00:00:002008-12-...   356799\n",
+      "ruby        2008-08-01 00:00:002008-09-01 00:00:002008-10-...   214582\n",
+      "swift       2009-01-01 00:00:002009-02-01 00:00:002009-03-...   273055\n",
+      "            DATE  POSTS\n",
+      "TAG                    \n",
+      "assembly     144    144\n",
+      "c            144    144\n",
+      "c#           145    145\n",
+      "c++          144    144\n",
+      "delphi       144    144\n",
+      "go           129    129\n",
+      "java         144    144\n",
+      "javascript   144    144\n",
+      "perl         144    144\n",
+      "php          144    144\n",
+      "python       144    144\n",
+      "r            142    142\n",
+      "ruby         144    144\n",
+      "swift        135    135\n"
      ]
     }
    ],
-   "execution_count": 19
+   "execution_count": 16
   },
   {
    "cell_type": "markdown",
@@ -522,13 +464,38 @@
    "metadata": {
     "id": "hDT4JlJNJfgQ",
     "colab_type": "code",
-    "colab": {}
+    "colab": {},
+    "ExecuteTime": {
+     "end_time": "2025-12-17T13:07:23.467162560Z",
+     "start_time": "2025-12-17T13:07:23.403003695Z"
+    }
    },
-   "source": [
-    ""
+   "source": "print(df.groupby(['TAG']).count())",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            DATE  POSTS\n",
+      "TAG                    \n",
+      "assembly     144    144\n",
+      "c            144    144\n",
+      "c#           145    145\n",
+      "c++          144    144\n",
+      "delphi       144    144\n",
+      "go           129    129\n",
+      "java         144    144\n",
+      "javascript   144    144\n",
+      "perl         144    144\n",
+      "php          144    144\n",
+      "python       144    144\n",
+      "r            142    142\n",
+      "ruby         144    144\n",
+      "swift        135    135\n"
+     ]
+    }
    ],
-   "execution_count": null,
-   "outputs": []
+   "execution_count": 17
   },
   {
    "cell_type": "markdown",
