--- a/74-lego-pieces/Lego_Analysis.ipynb
+++ b/74-lego-pieces/Lego_Analysis.ipynb
@@ -82,8 +82,8 @@
     "colab_type": "code",
     "colab": {},
     "ExecuteTime": {
-     "end_time": "2025-12-18T02:00:05.575395Z",
-     "start_time": "2025-12-18T02:00:05.286699Z"
+     "end_time": "2025-12-18T22:03:00.799035Z",
+     "start_time": "2025-12-18T22:02:59.031520Z"
     }
    },
    "source": "import pandas as pd",
@@ -126,8 +126,8 @@
     "colab_type": "code",
     "colab": {},
     "ExecuteTime": {
-     "end_time": "2025-12-18T02:01:17.220623Z",
-     "start_time": "2025-12-18T02:01:17.201082Z"
+     "end_time": "2025-12-18T22:03:04.661778Z",
+     "start_time": "2025-12-18T22:03:04.649545Z"
     }
    },
    "source": "color_df = pd.read_csv('data/colors.csv')",
@@ -147,8 +147,8 @@
     "colab_type": "code",
     "colab": {},
     "ExecuteTime": {
-     "end_time": "2025-12-18T02:03:08.426591Z",
-     "start_time": "2025-12-18T02:03:08.399315Z"
+     "end_time": "2025-12-18T22:03:06.807107Z",
+     "start_time": "2025-12-18T22:03:06.765398Z"
     }
    },
    "source": [
@@ -232,12 +232,12 @@
        "</div>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 5
+   "execution_count": 3
   },
   {
    "cell_type": "code",
@@ -252,24 +252,23 @@
     "colab_type": "code",
     "colab": {},
     "ExecuteTime": {
-     "end_time": "2025-12-18T02:04:43.721512Z",
-     "start_time": "2025-12-18T02:04:43.696117Z"
+     "end_time": "2025-12-18T22:08:40.745089Z",
+     "start_time": "2025-12-18T22:08:40.708017Z"
     }
    },
    "source": [
     "color_df['name'].count()\n",
-    "color_df.shape"
+    "color_df.shape\n",
+    "color_df['name'].unique()\n",
+    "print(len(color_df['name'].unique()))"
    ],
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(135, 4)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "135\n"
+     ]
     }
    ],
    "execution_count": 9
@@ -300,27 +299,35 @@
     "colab_type": "code",
     "colab": {},
     "ExecuteTime": {
-     "end_time": "2025-12-18T02:15:13.853063Z",
-     "start_time": "2025-12-18T02:15:13.828427Z"
+     "end_time": "2025-12-18T22:49:37.237904Z",
+     "start_time": "2025-12-18T22:49:37.190997Z"
     }
    },
    "source": [
-    "trans_count = 0\n",
-    "for trans in color_df['is_trans']:\n",
-    "    if trans == 't':\n",
-    "        trans_count =+ 1\n",
-    "print(trans_count)"
+    "# trans_count = 0\n",
+    "# for trans in color_df['is_trans']:\n",
+    "#     if trans == 't':\n",
+    "#         trans_count =+ 1\n",
+    "# print(trans_count)\n",
+    "color_df.groupby('is_trans').count()\n",
+    "color_df.is_trans.value_counts()"
    ],
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n"
-     ]
+     "data": {
+      "text/plain": [
+       "is_trans\n",
+       "f    107\n",
+       "t     28\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "execution_count": 10
+   "execution_count": 12
   },
   {
    "cell_type": "code",
