--- a/74-lego-pieces/Lego_Analysis.ipynb
+++ b/74-lego-pieces/Lego_Analysis.ipynb
@@ -1684,13 +1684,35 @@
    "metadata": {
     "id": "hOBcNrC9IqvE",
     "colab_type": "code",
-    "colab": {}
+    "colab": {},
+    "ExecuteTime": {
+     "end_time": "2025-12-20T00:50:34.892435Z",
+     "start_time": "2025-12-20T00:50:34.820902Z"
+    }
    },
    "source": [
-    ""
+    "set_theme_count = set_df['theme_id'].value_counts()\n",
+    "set_theme_count[:5]"
    ],
-   "execution_count": null,
-   "outputs": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "theme_id\n",
+       "158    753\n",
+       "501    656\n",
+       "494    398\n",
+       "435    356\n",
+       "503    329\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 26
   },
   {
    "cell_type": "markdown",
@@ -1699,7 +1721,8 @@
     "colab_type": "text"
    },
    "source": [
-    "**Challenge** Use what you know about HTML markup and tags to display the database schema: https://i.imgur.com/Sg4lcjx.png"
+    "**Challenge** Use what you know about HTML markup and tags to display the database schema:\n",
+    "<img src=\"https://i.imgur.com/Sg4lcjx.png"
    ]
   },
   {
@@ -1708,9 +1731,7 @@
     "id": "27oDwiPHIqvH",
     "colab_type": "text"
    },
-   "source": [
-    ""
-   ]
+   "source": "<img src=\"https://i.imgur.com/Sg4lcjx.png\">"
   },
   {
    "cell_type": "markdown",
