d75 google trends data

--- a/75 - google-trends-data/Google Trends and Data Visualisation.ipynb
+++ b/75 - google-trends-data/Google Trends and Data Visualisation.ipynb
@@ -31,13 +31,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-23T13:07:10.311624653Z",
+     "start_time": "2025-12-23T13:07:10.302869708Z"
+    }
+   },
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -50,17 +55,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-23T13:07:10.348904996Z",
+     "start_time": "2025-12-23T13:07:10.330054080Z"
+    }
+   },
    "source": [
-    "df_tesla = pd.read_csv('TESLA Search Trend vs Price.csv')\n",
+    "df_tesla = pd.read_csv('data/TESLA Search Trend vs Price.csv')\n",
     "\n",
-    "df_btc_search = pd.read_csv('Bitcoin Search Trend.csv')\n",
-    "df_btc_price = pd.read_csv('Daily Bitcoin Price.csv')\n",
+    "df_btc_search = pd.read_csv('data/Bitcoin Search Trend.csv')\n",
+    "df_btc_price = pd.read_csv('data/Daily Bitcoin Price.csv')\n",
     "\n",
-    "df_unemployment = pd.read_csv('UE Benefits Search vs UE Rate 2004-19.csv')"
-   ]
+    "df_unemployment = pd.read_csv('data/UE Benefits Search vs UE Rate 2004-19.csv')"
+   ],
+   "outputs": [],
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -94,15 +104,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-23T13:07:10.383411846Z",
+     "start_time": "2025-12-23T13:07:10.362899521Z"
+    }
+   },
+   "source": [],
    "outputs": [],
-   "source": []
+   "execution_count": 4
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-23T13:07:10.411593476Z",
+     "start_time": "2025-12-23T13:07:10.384425174Z"
+    }
+   },
+   "source": [
+    "print(f'Largest value for Tesla in Web Search: ')\n",
+    "print(f'Smallest value for Tesla in Web Search: ')"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -113,17 +136,19 @@
      ]
     }
    ],
-   "source": [
-    "print(f'Largest value for Tesla in Web Search: ')\n",
-    "print(f'Smallest value for Tesla in Web Search: ')"
-   ]
+   "execution_count": 5
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-23T13:07:10.428649547Z",
+     "start_time": "2025-12-23T13:07:10.413407684Z"
+    }
+   },
+   "source": [],
    "outputs": [],
-   "source": []
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -134,15 +159,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-23T13:07:10.450311037Z",
+     "start_time": "2025-12-23T13:07:10.438427365Z"
+    }
+   },
+   "source": [],
    "outputs": [],
-   "source": []
+   "execution_count": 5
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-23T13:07:10.476379333Z",
+     "start_time": "2025-12-23T13:07:10.451959446Z"
+    }
+   },
+   "source": [
+    "print('Largest value for \"Unemployemnt Benefits\" '\n",
+    "      f'in Web Search: ')"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -152,10 +190,7 @@
      ]
     }
    ],
-   "source": [
-    "print('Largest value for \"Unemployemnt Benefits\" '\n",
-    "      f'in Web Search: ')"
-   ]
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -166,22 +201,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-23T13:07:10.484503441Z",
+     "start_time": "2025-12-23T13:07:10.477577538Z"
+    }
+   },
+   "source": [],
    "outputs": [],
-   "source": []
+   "execution_count": 6
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-23T13:07:10.490518856Z",
+     "start_time": "2025-12-23T13:07:10.485414312Z"
+    }
+   },
+   "source": [],
    "outputs": [],
-   "source": []
+   "execution_count": 6
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-23T13:07:10.510684770Z",
+     "start_time": "2025-12-23T13:07:10.491500417Z"
+    }
+   },
+   "source": [
+    "print(f'largest BTC News Search: ')"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -191,9 +243,7 @@
      ]
     }
    ],
-   "source": [
-    "print(f'largest BTC News Search: ')"
-   ]
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
@@ -218,8 +268,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-23T13:07:10.530475014Z",
+     "start_time": "2025-12-23T13:07:10.513664146Z"
+    }
+   },
+   "source": [
+    "print(f'Missing values for Tesla?: ')\n",
+    "print(f'Missing values for U/E?: ')\n",
+    "print(f'Missing values for BTC Search?: ')"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -231,16 +290,19 @@
      ]
     }
    ],
-   "source": [
-    "print(f'Missing values for Tesla?: ')\n",
-    "print(f'Missing values for U/E?: ')\n",
-    "print(f'Missing values for BTC Search?: ')"
-   ]
+   "execution_count": 8
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-23T13:07:10.550954253Z",
+     "start_time": "2025-12-23T13:07:10.533968850Z"
+    }
+   },
+   "source": [
+    "print(f'Missing values for BTC price?: ')"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -250,14 +312,19 @@
      ]
     }
    ],
-   "source": [
-    "print(f'Missing values for BTC price?: ')"
-   ]
+   "execution_count": 9
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-23T13:07:10.574497347Z",
+     "start_time": "2025-12-23T13:07:10.554227935Z"
+    }
+   },
+   "source": [
+    "print(f'Number of missing values: ')"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -267,9 +334,7 @@
      ]
     }
    ],
-   "source": [
-    "print(f'Number of missing values: ')"
-   ]
+   "execution_count": 10
   },
   {
    "cell_type": "markdown",
@@ -280,10 +345,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-23T13:07:10.585505141Z",
+     "start_time": "2025-12-23T13:07:10.577650232Z"
+    }
+   },
+   "source": [],
    "outputs": [],
-   "source": []
+   "execution_count": 10
   },
   {
    "cell_type": "markdown",
@@ -301,24 +371,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-23T13:07:10.592651493Z",
+     "start_time": "2025-12-23T13:07:10.586463613Z"
+    }
+   },
+   "source": [],
    "outputs": [],
-   "source": []
+   "execution_count": 10
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-23T13:07:10.600175265Z",
+     "start_time": "2025-12-23T13:07:10.593793634Z"
+    }
+   },
+   "source": [],
    "outputs": [],
-   "source": []
+   "execution_count": 10
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-23T13:07:10.619594978Z",
+     "start_time": "2025-12-23T13:07:10.601384181Z"
+    }
+   },
+   "source": [],
    "outputs": [],
-   "source": []
+   "execution_count": 10
   },
   {
    "cell_type": "markdown",
@@ -331,17 +416,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-23T13:07:10.635922453Z",
+     "start_time": "2025-12-23T13:07:10.623408296Z"
+    }
+   },
+   "source": [],
    "outputs": [],
-   "source": []
+   "execution_count": 10
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-23T13:07:10.653505145Z",
+     "start_time": "2025-12-23T13:07:10.636988023Z"
+    }
+   },
+   "source": [],
    "outputs": [],
-   "source": []
+   "execution_count": 10
   },
   {
    "cell_type": "markdown",
@@ -359,21 +454,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-23T13:07:10.663879817Z",
+     "start_time": "2025-12-23T13:07:10.655841108Z"
+    }
+   },
    "source": [
     "# Create locators for ticks on the time axis"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 11
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-23T13:07:10.672501523Z",
+     "start_time": "2025-12-23T13:07:10.664965693Z"
+    }
+   },
    "source": [
     "# Register date converters to avoid warning messages"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 12
   },
   {
    "cell_type": "markdown",
@@ -391,10 +496,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-23T13:07:10.680526874Z",
+     "start_time": "2025-12-23T13:07:10.673643686Z"
+    }
+   },
+   "source": [],
    "outputs": [],
-   "source": []
+   "execution_count": 12
   },
   {
    "cell_type": "markdown",
@@ -408,10 +518,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-23T13:07:10.687461720Z",
+     "start_time": "2025-12-23T13:07:10.681494373Z"
+    }
+   },
+   "source": [],
    "outputs": [],
-   "source": []
+   "execution_count": 12
   },
   {
    "cell_type": "markdown",
@@ -430,10 +545,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-23T13:07:10.694917763Z",
+     "start_time": "2025-12-23T13:07:10.688605880Z"
+    }
+   },
+   "source": [],
    "outputs": [],
-   "source": []
+   "execution_count": 12
   },
   {
    "cell_type": "markdown",
@@ -444,10 +564,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-23T13:07:10.702416043Z",
+     "start_time": "2025-12-23T13:07:10.696078618Z"
+    }
+   },
+   "source": [],
    "outputs": [],
-   "source": []
+   "execution_count": 12
   },
   {
    "cell_type": "markdown",
@@ -471,17 +596,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-23T13:07:10.709159893Z",
+     "start_time": "2025-12-23T13:07:10.703387173Z"
+    }
+   },
+   "source": [],
    "outputs": [],
-   "source": []
+   "execution_count": 12
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-23T13:07:10.716123629Z",
+     "start_time": "2025-12-23T13:07:10.710352057Z"
+    }
+   },
+   "source": [],
    "outputs": [],
-   "source": []
+   "execution_count": 12
   },
   {
    "cell_type": "markdown",
@@ -504,10 +639,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-23T13:07:10.724234822Z",
+     "start_time": "2025-12-23T13:07:10.717447753Z"
+    }
+   },
+   "source": [],
    "outputs": [],
-   "source": []
+   "execution_count": 12
   },
   {
    "cell_type": "markdown",
@@ -518,10 +658,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-23T13:07:10.733127136Z",
+     "start_time": "2025-12-23T13:07:10.725484342Z"
+    }
+   },
+   "source": [],
    "outputs": [],
-   "source": []
+   "execution_count": 12
   },
   {
    "cell_type": "markdown",
@@ -539,24 +684,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-23T13:07:10.740444610Z",
+     "start_time": "2025-12-23T13:07:10.734353745Z"
+    }
+   },
+   "source": [],
    "outputs": [],
-   "source": []
+   "execution_count": 12
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-23T13:07:10.760292079Z",
+     "start_time": "2025-12-23T13:07:10.741702613Z"
+    }
+   },
+   "source": [],
    "outputs": [],
-   "source": []
+   "execution_count": 12
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-23T13:07:10.771349304Z",
+     "start_time": "2025-12-23T13:07:10.762329619Z"
+    }
+   },
+   "source": [],
    "outputs": [],
-   "source": []
+   "execution_count": 12
   }
  ],
  "metadata": {
