--- a/75 - google-trends-data/Google Trends and Data Visualisation.ipynb
+++ b/75 - google-trends-data/Google Trends and Data Visualisation.ipynb
@@ -755,28 +755,28 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-23T16:54:17.806842Z",
-     "start_time": "2025-12-23T16:54:17.781309Z"
+     "end_time": "2025-12-23T20:04:33.436246Z",
+     "start_time": "2025-12-23T20:04:33.392767Z"
     }
    },
    "source": [
     "\n",
     "print(f'Missing values for Tesla?: {df_tesla.isna().values.any()}')\n",
-    "print(f'Missing values for U/E?: ')\n",
-    "print(f'Missing values for BTC Search?: ')"
+    "print(f'Missing values for U/E?: {df_unemployment.isna().values.any()}')\n",
+    "print(f'Missing values for BTC Search?: {df_btc_search.isna().values.any()}')"
    ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Missing values for Tesla?: \n",
-      "Missing values for U/E?: \n",
-      "Missing values for BTC Search?: \n"
+      "Missing values for Tesla?: False\n",
+      "Missing values for U/E?: False\n",
+      "Missing values for BTC Search?: False\n"
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 29
   },
   {
    "cell_type": "code",
